# azure-iot-sdk-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: labeler.yml  release.yml
.github/workflows/: build.yml  create-pr-device.yml  delete-pr-device.yml  integration-tests.yml  labeler.yml  release-drafter.yml  release.yml
examples/: config.sample.toml  device-provisioning-service.rs  receive-c2d-messages.rs  rpizero_dht22.rs  send-message.rs  temperature-client.rs
integration_tests/: azuredeploy.json  iotHub.bicep  main.bicep
src/: client.rs  client_builder.rs  dtmi.rs  error.rs  errors.rs  http_transport.rs  lib.rs  message.rs  mqtt_transport.rs  provision.rs  token.rs  transport.rs
src/transport/: mod.rs  mqtt.rs
tests/: integration_tests.rs
