[package]
name = "azure_iot_sdk"
version = "0.4.0"
authors = ["Damien Pontifex <damien.pontifex@gmail.com>"]
edition = "2018"
repository = "https://github.com/damienpontifex/azure-iot-sdk-rs"
documentation = "https://docs.rs/azure_iot_sdk"
description = "Client library for connection devices to Azure IoT Hub"
keywords = ["iot", "azure"]
license = "MIT"
readme = "README.md"

[features]
default = ["c2d-messages", "direct-methods", "twin-properties", "with-provision"]
direct-methods = []
twin-properties = []
c2d-messages = []
http-transport = ["hyper", "hyper-tls"]
with-provision = ["hyper", "hyper-tls"]

[dependencies]
log = "0.4.0"
mqtt-protocol = { version = "0.8.1", features = ["async"] }
serde_urlencoded = "0.6.1"
serde_json = "1.0.55"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["rt-threaded", "macros", "tcp", "dns", "io-util", "time", "sync"] }
native-tls = "0.2.4"
tokio-native-tls = "0.1.0"
futures = "0.3"
chrono = "0.4.11"
hmac = "0.7.1"
sha2 = "0.8.1"
base64 = "0.12.0"
async-trait = "0.1.30"
hyper = { version = "0.13", optional = true }
hyper-tls = { version = "0.4.1", optional = true }

[dev-dependencies]
log = "0.4.0"
env_logger = "0.7.1"
rand = "0.7.3"
rand_distr = "0.2.2"
config = "0.10.1"
dotenv = "0.15"
serde_json = "1.0"
chrono = { version = "0.4.11", features = ["serde"] }

