[package]
name = "azure_iot_sdk"
version = "0.6.1"
authors = ["Damien Pontifex <damien.pontifex@gmail.com>"]
edition = "2018"
repository = "https://github.com/damienpontifex/azure-iot-sdk-rs"
documentation = "https://docs.rs/azure_iot_sdk"
description = "Client library for connection devices to Azure IoT Hub"
keywords = ["iot", "azure"]
license = "MIT"
readme = "README.md"

[features]
default = ["c2d-messages", "direct-methods", "twin-properties", "with-provision", "error-handling-messages"]
direct-methods = []
twin-properties = []
c2d-messages = []
error-handling-messages = []
# http-transport = ["hyper", "hyper-tls"]
with-provision = ["hyper", "hyper-tls"]

[dependencies]
log = "0.4.0"
mqtt-protocol = { version = "0.10", features = ["async"] }
serde_urlencoded = "0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
native-tls = "0.2.4"
tokio-native-tls = "0.3"
futures = "0.3"
chrono = "0.4"
hmac = "0.10"
sha2 = "0.9"
base64 = "0.13"
async-trait = "0.1"
hyper = { version = "0.14", features = ["client", "http2"], optional = true }
hyper-tls = { version = "0.5", optional = true }
form_urlencoded = "1.0"

[dev-dependencies]
log = "0.4"
env_logger = "0.8"
rand = "0.8"
rand_distr = "0.4"
config = "0.10"
dotenv = "0.15"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[[example]]
name = "send-message"
default-features = false

[[example]]
name = "receive-c2d-messages"
default-features = false
required-features = ["c2d-messages"]

