[package]
name = "azure_iot_sdk"
version = "0.8.0"
authors = ["Damien Pontifex <damien.pontifex@gmail.com>"]
edition = "2021"
repository = "https://github.com/damienpontifex/azure-iot-sdk-rs"
documentation = "https://docs.rs/azure_iot_sdk"
description = "Client library for connection devices to Azure IoT Hub"
keywords = ["iot", "azure"]
license = "MIT"
readme = "README.md"

[features]
default = ["c2d-messages", "direct-methods", "twin-properties", "with-provision", "error-handling-messages"]
direct-methods = []
twin-properties = []
c2d-messages = []
error-handling-messages = []
https-transport = ["hyper", "hyper-tls"]
with-provision = []

[dependencies]
log = "0.4"
mqtt-protocol = { version = "0.11", features = ["tokio"] }
serde_urlencoded = "0.7"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "net", "io-util", "time", "sync"] }
native-tls = "0.2.4"
tokio-native-tls = "0.3"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.13"
async-trait = "0.1"
hyper = { version = "0.14", features = ["client", "http1"], optional = true }
hyper-tls = { version = "0.5", optional = true }
form_urlencoded = "1"
enum_dispatch = "0.3"

[dev-dependencies]
env_logger = "0.9"
rand = "0.8"
rand_distr = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[example]]
name = "send-message"
default-features = false
required-features = ["https-transport"]

[[example]]
name = "receive-c2d-messages"
default-features = false
required-features = ["c2d-messages"]

